# MkDocs_homepage

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: 3BS.md  abu.md  adnan.md  amrei.md  board.md  contact.md  courses.md  dardel.md  dropin.md  hpc2n.md  index.md  learning-resources.md  lizel.md  nicolas.md  online-resources.md  publications.md  renaud.md  slubi.md  social.md  support_what.md  theses.md
docs/archive/category/: events.md  workshops.md
docs/javascripts/: scroll-in.js
docs/stylesheets/: extra.css
